syntax = "proto3";

package yolo;

service YOLOservice {
  rpc Detect (YOLORequest) returns (YOLOResponse);
}

message YOLORequest {
  bytes image = 1;
  float confidence_threshold = 2;
}

message YOLOResponse {
  bytes labeled_image = 1;
  string detections_json = 2;
}
